# Maracha-Data-Science-Project

./: README.md  __init__.py  advanced_ocr.html  base.html  config.py  forms.py  models.py  routes.py  run.py  text_image_fucntionality.py
image_text_extract/: README.md  pyproject.toml  requirements.txt  run.py
image_text_extract/instance/: users.db
image_text_extract/text_extractor/: config.py  forms.py  models.py  routes.py  text_image_fucntionality.py
image_text_extract/text_extractor/static/css/: main.css
image_text_extract/text_extractor/templates/: base.html  capture.html  create_user.html  dashboard.html  gallery.html  login.html  upload.html
instance/: users.db
text_extractor/: advanced_ocr.py  config.py  forms.py  maracha-aa7842763068.json  models.py  pyproject.toml  routes.py  text_image_fucntionality.py  utils.py
text_extractor/extracted_data/: extracted_data.txt
text_extractor/models/: extracted_data.py
text_extractor/static/css/: login.css  main.css
text_extractor/templates/: analytics_reports.html  base.html  capture.html  dashboard.html  edit_inpatient_treatment_sheet.html  edit_patient.html  ehr.html  fbase.html  gallery.html  health_records.html  hospital_forms.html  idashboard.html  inpatient_treatment_sheet.html  inpatient_treatment_sheet_edit.html  inpatient_treatment_sheet_print.html  ittbase.html  laboratory_request_form.html  login.html  operation_report.html  operation_report_print.html  operation_reports.html  patient_information.html  print.html  print_laboratory_request.html  referral_note.html  referral_note_detail.html  referral_note_print.html  referral_notes.html  upload.html  ward_files.html
