[project]
name = "image_text_extract"
version = "1.0.0"
description = "Your project description."
authors = [{ name = "ASIKU NASIBU", email = "asikunasibu4@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status ::   3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python ::   3",
    "Programming Language :: Python ::   3.10",
    "Programming Language :: Python ::   3.11",
    "Programming Language :: Python ::   3.12", ]

keywords = ["flask", "ocr", "tesseract"]

[project.scripts]
image_text_extract = "image_text_extract.__main__:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
