[project]
name = "image_text_extract"
version = "1.0.0"
description = "Your project description."
authors = ["ASIKU NASIBU <asikunasibu4@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.com/image_text_extract"
classifiers = [
    "Development Status ::  3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python ::  3",
    "Programming Language :: Python ::  3.6",
    "Programming Language :: Python ::  3.7",
    "Programming Language :: Python ::  3.8",
    "Programming Language :: Python ::  3.9",
    "Programming Language :: Python ::  3.10",
    "Programming Language :: Python ::  3.11",
    "Programming Language :: Python ::  3.12",
]
keywords = "flask ocr tesseract"
entry-points = { "console_scripts" = ["image_text_extract = image_text_extract.__main__:main",]}
dependencies = [
    "flask",
    "pytesseract",
    "Pillow",
    "numpy",
    "opencv-python",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
